// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI Elements/Sidebar Closed With No Active Tab 1`] = `
<div
  style={
    Object {
      "--sidebarPadding": "24px",
      "--sidebarWidth": "400px",
    }
  }
>
  <aside
    className="fixed transform z-10 transition inset-0 right-auto"
    style={
      Object {
        "height": "100vh",
        "padding": "var(--sidebarPadding, 20px)",
        "paddingRight": 0,
        "transform": "translateX(-100%)",
        "width": "var(--sidebarWidth, 320px)",
      }
    }
  >
    <div
      className="rounded bg-white shadow-lg relative h-full overflow-x-hidden overflow-y-auto"
      id="sidebar-scroll-container"
    >
      <div
        className="p-8 pt-0"
        style={
          Object {
            "minHeight": "calc(100vh - (var(--sidebarPadding, 24px) * 2) - 0px)",
          }
        }
      />
    </div>
  </aside>
  <nav
    className="fixed inset-0 transition box-content z-10 closed right-auto w-16"
    style={
      Object {
        "left": "var(--sidebarWidth, 320px)",
        "padding": "var(--sidebarPadding, 20px) 16px",
        "transform": "translateX(calc(var(--sidebarWidth, 320px) * -1 + (var(--sidebarPadding, 20px) / 2)))",
      }
    }
  >
    <ul
      className="flex bg-white rounded shadow-lg  flex-col"
    >
      <li
        className="group relative h-16"
      >
        <span
          className="transition opacity-0 px-3 py-1 rounded bg-gray-800 text-white transform absolute whitespace-nowrap delay-1000 pointer-events-none group-hover:opacity-100 group-hover:delay-0 bg-opacity-90 left-full top-1/2 translate-x-2 -translate-y-1/2"
        >
          Filters
        </span>
        <a
          className="transition group-first:rounded-t group-last:rounded-b w-full h-full grid place-items-center focus:rounded hover:bg-gray-200 focus:ring-offset-2 focus:ring-offset-white hover:text-gray-800 focus:ring-2 focus:ring-gray-800 focus:outline-none"
          href="/filters"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 4C3 3.73478 3.10536 3.48043 3.29289 3.29289C3.48043 3.10536 3.73478 3 4 3H20C20.2652 3 20.5196 3.10536 20.7071 3.29289C20.8946 3.48043 21 3.73478 21 4V6.586C20.9999 6.85119 20.8946 7.10551 20.707 7.293L14.293 13.707C14.1055 13.8945 14.0001 14.1488 14 14.414V17L10 21V14.414C9.99994 14.1488 9.89455 13.8945 9.707 13.707L3.293 7.293C3.10545 7.10551 3.00006 6.85119 3 6.586V4Z"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </a>
      </li>
      <li
        className="group relative h-16"
      >
        <span
          className="transition opacity-0 px-3 py-1 rounded bg-gray-800 text-white transform absolute whitespace-nowrap delay-1000 pointer-events-none group-hover:opacity-100 group-hover:delay-0 bg-opacity-90 left-full top-1/2 translate-x-2 -translate-y-1/2"
        >
          Suche
        </span>
        <a
          className="transition group-first:rounded-t group-last:rounded-b w-full h-full grid place-items-center focus:rounded hover:bg-gray-200 focus:ring-offset-2 focus:ring-offset-white hover:text-gray-800 focus:ring-2 focus:ring-gray-800 focus:outline-none"
          href="/search"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21 21L15 15L21 21ZM17 10C17 10.9193 16.8189 11.8295 16.4672 12.6788C16.1154 13.5281 15.5998 14.2997 14.9497 14.9497C14.2997 15.5998 13.5281 16.1154 12.6788 16.4672C11.8295 16.8189 10.9193 17 10 17C9.08075 17 8.1705 16.8189 7.32122 16.4672C6.47194 16.1154 5.70026 15.5998 5.05025 14.9497C4.40024 14.2997 3.88463 13.5281 3.53284 12.6788C3.18106 11.8295 3 10.9193 3 10C3 8.14348 3.7375 6.36301 5.05025 5.05025C6.36301 3.7375 8.14348 3 10 3C11.8565 3 13.637 3.7375 14.9497 5.05025C16.2625 6.36301 17 8.14348 17 10Z"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </a>
      </li>
      <li
        className="group relative h-16"
      >
        <span
          className="transition opacity-0 px-3 py-1 rounded bg-gray-800 text-white transform absolute whitespace-nowrap delay-1000 pointer-events-none group-hover:opacity-100 group-hover:delay-0 bg-opacity-90 left-full top-1/2 translate-x-2 -translate-y-1/2"
        >
          Über das Projekt
        </span>
        <a
          className="transition group-first:rounded-t group-last:rounded-b w-full h-full grid place-items-center focus:rounded hover:bg-gray-200 focus:ring-offset-2 focus:ring-offset-white hover:text-gray-800 focus:ring-2 focus:ring-gray-800 focus:outline-none"
          href="/about"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13 16H12V12H11L13 16ZM12 8H12.01H12ZM21 12C21 13.1819 20.7672 14.3522 20.3149 15.4442C19.8626 16.5361 19.1997 17.5282 18.364 18.364C17.5282 19.1997 16.5361 19.8626 15.4442 20.3149C14.3522 20.7672 13.1819 21 12 21C10.8181 21 9.64778 20.7672 8.55585 20.3149C7.46392 19.8626 6.47177 19.1997 5.63604 18.364C4.80031 17.5282 4.13738 16.5361 3.68508 15.4442C3.23279 14.3522 3 13.1819 3 12C3 9.61305 3.94821 7.32387 5.63604 5.63604C7.32387 3.94821 9.61305 3 12 3C14.3869 3 16.6761 3.94821 18.364 5.63604C20.0518 7.32387 21 9.61305 21 12Z"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Storyshots UI Elements/Sidebar Opened With Active Tab 1`] = `
<div
  style={
    Object {
      "--sidebarPadding": "24px",
      "--sidebarWidth": "400px",
    }
  }
>
  <aside
    className="fixed transform z-10 transition inset-0 right-auto"
    style={
      Object {
        "height": "100vh",
        "padding": "var(--sidebarPadding, 20px)",
        "paddingRight": 0,
        "transform": "translateX(0)",
        "width": "var(--sidebarWidth, 320px)",
      }
    }
  >
    <div
      className="rounded bg-white shadow-lg relative h-full overflow-x-hidden overflow-y-auto"
      id="sidebar-scroll-container"
    >
      <div
        className="p-8 pt-0"
        style={
          Object {
            "minHeight": "calc(100vh - (var(--sidebarPadding, 24px) * 2) - 0px)",
          }
        }
      />
    </div>
  </aside>
  <nav
    className="fixed inset-0 transition box-content z-10 opened right-auto w-16"
    style={
      Object {
        "left": "var(--sidebarWidth, 320px)",
        "padding": "var(--sidebarPadding, 20px) 16px",
        "transform": "translateX(0)",
      }
    }
  >
    <ul
      className="flex bg-white rounded shadow-lg  flex-col"
    >
      <li
        className="group relative h-16"
      >
        <span
          className="transition opacity-0 px-3 py-1 rounded bg-gray-800 text-white transform absolute whitespace-nowrap delay-1000 pointer-events-none group-hover:opacity-100 group-hover:delay-0 bg-opacity-90 left-full top-1/2 translate-x-2 -translate-y-1/2"
        >
          Filters
        </span>
        <a
          className="transition group-first:rounded-t group-last:rounded-b w-full h-full grid place-items-center focus:rounded hover:bg-gray-200 focus:ring-offset-2 focus:ring-offset-white hover:text-gray-800 focus:ring-2 focus:ring-gray-800 focus:outline-none bg-gray-800 text-white active"
          href="/map"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 6L18 18M6 18L18 6L6 18Z"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </a>
      </li>
      <li
        className="group relative h-16"
      >
        <span
          className="transition opacity-0 px-3 py-1 rounded bg-gray-800 text-white transform absolute whitespace-nowrap delay-1000 pointer-events-none group-hover:opacity-100 group-hover:delay-0 bg-opacity-90 left-full top-1/2 translate-x-2 -translate-y-1/2"
        >
          Suche
        </span>
        <a
          className="transition group-first:rounded-t group-last:rounded-b w-full h-full grid place-items-center focus:rounded hover:bg-gray-200 focus:ring-offset-2 focus:ring-offset-white hover:text-gray-800 focus:ring-2 focus:ring-gray-800 focus:outline-none"
          href="/search"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21 21L15 15L21 21ZM17 10C17 10.9193 16.8189 11.8295 16.4672 12.6788C16.1154 13.5281 15.5998 14.2997 14.9497 14.9497C14.2997 15.5998 13.5281 16.1154 12.6788 16.4672C11.8295 16.8189 10.9193 17 10 17C9.08075 17 8.1705 16.8189 7.32122 16.4672C6.47194 16.1154 5.70026 15.5998 5.05025 14.9497C4.40024 14.2997 3.88463 13.5281 3.53284 12.6788C3.18106 11.8295 3 10.9193 3 10C3 8.14348 3.7375 6.36301 5.05025 5.05025C6.36301 3.7375 8.14348 3 10 3C11.8565 3 13.637 3.7375 14.9497 5.05025C16.2625 6.36301 17 8.14348 17 10Z"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </a>
      </li>
      <li
        className="group relative h-16"
      >
        <span
          className="transition opacity-0 px-3 py-1 rounded bg-gray-800 text-white transform absolute whitespace-nowrap delay-1000 pointer-events-none group-hover:opacity-100 group-hover:delay-0 bg-opacity-90 left-full top-1/2 translate-x-2 -translate-y-1/2"
        >
          Über das Projekt
        </span>
        <a
          className="transition group-first:rounded-t group-last:rounded-b w-full h-full grid place-items-center focus:rounded hover:bg-gray-200 focus:ring-offset-2 focus:ring-offset-white hover:text-gray-800 focus:ring-2 focus:ring-gray-800 focus:outline-none"
          href="/about"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M13 16H12V12H11L13 16ZM12 8H12.01H12ZM21 12C21 13.1819 20.7672 14.3522 20.3149 15.4442C19.8626 16.5361 19.1997 17.5282 18.364 18.364C17.5282 19.1997 16.5361 19.8626 15.4442 20.3149C14.3522 20.7672 13.1819 21 12 21C10.8181 21 9.64778 20.7672 8.55585 20.3149C7.46392 19.8626 6.47177 19.1997 5.63604 18.364C4.80031 17.5282 4.13738 16.5361 3.68508 15.4442C3.23279 14.3522 3 13.1819 3 12C3 9.61305 3.94821 7.32387 5.63604 5.63604C7.32387 3.94821 9.61305 3 12 3C14.3869 3 16.6761 3.94821 18.364 5.63604C20.0518 7.32387 21 9.61305 21 12Z"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Storyshots UI Elements/Sidebar With Title And Long Content 1`] = `
<div
  style={
    Object {
      "--sidebarPadding": "24px",
      "--sidebarWidth": "400px",
    }
  }
>
  <aside
    className="fixed transform z-10 transition inset-0 right-auto"
    style={
      Object {
        "height": "100vh",
        "padding": "var(--sidebarPadding, 20px)",
        "paddingRight": 0,
        "transform": "translateX(0)",
        "width": "var(--sidebarWidth, 320px)",
      }
    }
  >
    <div
      className="rounded bg-white shadow-lg relative h-full overflow-x-hidden overflow-y-auto"
      id="sidebar-scroll-container"
    >
      <h1
        className="sticky inset-0 bottom-auto transition p-8 pb-6 text-2xl font-bold bg-white"
      >
        About
      </h1>
      <div
        className="p-8 pt-0"
        style={
          Object {
            "minHeight": "calc(100vh - (var(--sidebarPadding, 24px) * 2) - 88px)",
          }
        }
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur arcu neque, condimentum eu ligula quis, porttitor aliquam nulla. Praesent purus neque, dignissim eget porttitor eu, vulputate a purus. Cras commodo tellus gravida tincidunt ultricies. Maecenas a eros enim. Ut sem diam, porta et metus sit amet, placerat vehicula neque. In ut placerat felis, sit amet varius risus. Pellentesque eu euismod nisl. Mauris et lobortis sem, eu blandit neque. Praesent et semper massa. Aliquam erat volutpat. Curabitur ornare cursus mauris, sit amet volutpat lacus condimentum non. Nullam vitae mauris a velit sagittis efficitur. Mauris finibus sapien sit amet mauris sollicitudin, vitae tincidunt lectus iaculis. Nam non iaculis augue. Sed tempus in lorem quis dignissim. Nulla vitae imperdiet lorem, eu tempus erat. Nulla sagittis risus arcu, tempor sagittis purus dictum ac. Donec feugiat risus vitae mauris porta vehicula. Etiam nec ante mi. Vivamus ac odio convallis, aliquet ligula id, euismod metus. Nam elementum facilisis est eget condimentum. Praesent non ullamcorper mauris. In finibus libero eget ex mollis facilisis. Ut lorem felis, sodales non nisi vel, tristique aliquam sapien. Donec est diam, bibendum sit amet sodales vel, ultricies non risus. Phasellus aliquam porttitor imperdiet. Nam pretium molestie nunc ac venenatis. Sed faucibus nibh id ex bibendum, eget sagittis mi sodales. Aliquam laoreet odio dui, vitae tincidunt quam rhoncus vitae. Aenean mauris lorem, consectetur nec efficitur vel, feugiat vitae quam. Quisque sodales fermentum urna in congue. Vivamus eleifend felis nec odio tempus sodales. Morbi egestas in nulla id pellentesque. Sed vel enim ligula. Nunc suscipit consectetur diam, a iaculis erat laoreet id. Aenean porta odio vel leo lobortis, accumsan fermentum ex aliquet. In hac habitasse platea dictumst. Fusce cursus, justo ut consectetur maximus, neque nunc sodales diam, vitae hendrerit turpis tellus sit amet sapien. Aliquam dapibus nulla leo, eget feugiat turpis sagittis non. Suspendisse ante turpis, dignissim in posuere quis, porta id leo. In tincidunt diam ut massa hendrerit sollicitudin non in magna. Vestibulum gravida arcu aliquet, sagittis ligula auctor, placerat diam. Vivamus porttitor semper massa non consequat. Vestibulum varius elit at ipsum gravida, sit amet lacinia orci convallis. Sed aliquet massa nec magna vehicula, sit amet auctor leo rhoncus. Aliquam eleifend augue ut eros accumsan ullamcorper. Morbi laoreet molestie eleifend. Aenean in nulla a eros tristique accumsan eu id est. Donec at hendrerit magna. Nulla vel convallis ipsum. Aenean enim est, iaculis ut ultricies at, facilisis sit amet purus. Sed ut consequat augue. Etiam scelerisque sagittis tincidunt. Phasellus tincidunt quis enim id convallis.
      </div>
    </div>
  </aside>
  <nav
    className="fixed inset-0 transition box-content z-10 opened right-auto w-16"
    style={
      Object {
        "left": "var(--sidebarWidth, 320px)",
        "padding": "var(--sidebarPadding, 20px) 16px",
        "transform": "translateX(0)",
      }
    }
  >
    <ul
      className="flex bg-white rounded shadow-lg  flex-col"
    >
      <li
        className="group relative h-16"
      >
        <span
          className="transition opacity-0 px-3 py-1 rounded bg-gray-800 text-white transform absolute whitespace-nowrap delay-1000 pointer-events-none group-hover:opacity-100 group-hover:delay-0 bg-opacity-90 left-full top-1/2 translate-x-2 -translate-y-1/2"
        >
          Filters
        </span>
        <a
          className="transition group-first:rounded-t group-last:rounded-b w-full h-full grid place-items-center focus:rounded hover:bg-gray-200 focus:ring-offset-2 focus:ring-offset-white hover:text-gray-800 focus:ring-2 focus:ring-gray-800 focus:outline-none"
          href="/filters"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 4C3 3.73478 3.10536 3.48043 3.29289 3.29289C3.48043 3.10536 3.73478 3 4 3H20C20.2652 3 20.5196 3.10536 20.7071 3.29289C20.8946 3.48043 21 3.73478 21 4V6.586C20.9999 6.85119 20.8946 7.10551 20.707 7.293L14.293 13.707C14.1055 13.8945 14.0001 14.1488 14 14.414V17L10 21V14.414C9.99994 14.1488 9.89455 13.8945 9.707 13.707L3.293 7.293C3.10545 7.10551 3.00006 6.85119 3 6.586V4Z"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </a>
      </li>
      <li
        className="group relative h-16"
      >
        <span
          className="transition opacity-0 px-3 py-1 rounded bg-gray-800 text-white transform absolute whitespace-nowrap delay-1000 pointer-events-none group-hover:opacity-100 group-hover:delay-0 bg-opacity-90 left-full top-1/2 translate-x-2 -translate-y-1/2"
        >
          Suche
        </span>
        <a
          className="transition group-first:rounded-t group-last:rounded-b w-full h-full grid place-items-center focus:rounded hover:bg-gray-200 focus:ring-offset-2 focus:ring-offset-white hover:text-gray-800 focus:ring-2 focus:ring-gray-800 focus:outline-none"
          href="/search"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21 21L15 15L21 21ZM17 10C17 10.9193 16.8189 11.8295 16.4672 12.6788C16.1154 13.5281 15.5998 14.2997 14.9497 14.9497C14.2997 15.5998 13.5281 16.1154 12.6788 16.4672C11.8295 16.8189 10.9193 17 10 17C9.08075 17 8.1705 16.8189 7.32122 16.4672C6.47194 16.1154 5.70026 15.5998 5.05025 14.9497C4.40024 14.2997 3.88463 13.5281 3.53284 12.6788C3.18106 11.8295 3 10.9193 3 10C3 8.14348 3.7375 6.36301 5.05025 5.05025C6.36301 3.7375 8.14348 3 10 3C11.8565 3 13.637 3.7375 14.9497 5.05025C16.2625 6.36301 17 8.14348 17 10Z"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </a>
      </li>
      <li
        className="group relative h-16"
      >
        <span
          className="transition opacity-0 px-3 py-1 rounded bg-gray-800 text-white transform absolute whitespace-nowrap delay-1000 pointer-events-none group-hover:opacity-100 group-hover:delay-0 bg-opacity-90 left-full top-1/2 translate-x-2 -translate-y-1/2"
        >
          Über das Projekt
        </span>
        <a
          className="transition group-first:rounded-t group-last:rounded-b w-full h-full grid place-items-center focus:rounded hover:bg-gray-200 focus:ring-offset-2 focus:ring-offset-white hover:text-gray-800 focus:ring-2 focus:ring-gray-800 focus:outline-none bg-gray-800 text-white active"
          href="/map"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 6L18 18M6 18L18 6L6 18Z"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Storyshots UI Elements/Sidebar With Title And Short Content 1`] = `
<div
  style={
    Object {
      "--sidebarPadding": "24px",
      "--sidebarWidth": "400px",
    }
  }
>
  <aside
    className="fixed transform z-10 transition inset-0 right-auto"
    style={
      Object {
        "height": "100vh",
        "padding": "var(--sidebarPadding, 20px)",
        "paddingRight": 0,
        "transform": "translateX(0)",
        "width": "var(--sidebarWidth, 320px)",
      }
    }
  >
    <div
      className="rounded bg-white shadow-lg relative h-full overflow-x-hidden overflow-y-auto"
      id="sidebar-scroll-container"
    >
      <h1
        className="sticky inset-0 bottom-auto transition p-8 pb-6 text-2xl font-bold bg-white"
      >
        Hello
      </h1>
      <div
        className="p-8 pt-0"
        style={
          Object {
            "minHeight": "calc(100vh - (var(--sidebarPadding, 24px) * 2) - 88px)",
          }
        }
      >
        Hello
      </div>
    </div>
  </aside>
  <nav
    className="fixed inset-0 transition box-content z-10 opened right-auto w-16"
    style={
      Object {
        "left": "var(--sidebarWidth, 320px)",
        "padding": "var(--sidebarPadding, 20px) 16px",
        "transform": "translateX(0)",
      }
    }
  >
    <ul
      className="flex bg-white rounded shadow-lg  flex-col"
    >
      <li
        className="group relative h-16"
      >
        <span
          className="transition opacity-0 px-3 py-1 rounded bg-gray-800 text-white transform absolute whitespace-nowrap delay-1000 pointer-events-none group-hover:opacity-100 group-hover:delay-0 bg-opacity-90 left-full top-1/2 translate-x-2 -translate-y-1/2"
        >
          Filters
        </span>
        <a
          className="transition group-first:rounded-t group-last:rounded-b w-full h-full grid place-items-center focus:rounded hover:bg-gray-200 focus:ring-offset-2 focus:ring-offset-white hover:text-gray-800 focus:ring-2 focus:ring-gray-800 focus:outline-none"
          href="/filters"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 4C3 3.73478 3.10536 3.48043 3.29289 3.29289C3.48043 3.10536 3.73478 3 4 3H20C20.2652 3 20.5196 3.10536 20.7071 3.29289C20.8946 3.48043 21 3.73478 21 4V6.586C20.9999 6.85119 20.8946 7.10551 20.707 7.293L14.293 13.707C14.1055 13.8945 14.0001 14.1488 14 14.414V17L10 21V14.414C9.99994 14.1488 9.89455 13.8945 9.707 13.707L3.293 7.293C3.10545 7.10551 3.00006 6.85119 3 6.586V4Z"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </a>
      </li>
      <li
        className="group relative h-16"
      >
        <span
          className="transition opacity-0 px-3 py-1 rounded bg-gray-800 text-white transform absolute whitespace-nowrap delay-1000 pointer-events-none group-hover:opacity-100 group-hover:delay-0 bg-opacity-90 left-full top-1/2 translate-x-2 -translate-y-1/2"
        >
          Suche
        </span>
        <a
          className="transition group-first:rounded-t group-last:rounded-b w-full h-full grid place-items-center focus:rounded hover:bg-gray-200 focus:ring-offset-2 focus:ring-offset-white hover:text-gray-800 focus:ring-2 focus:ring-gray-800 focus:outline-none"
          href="/search"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21 21L15 15L21 21ZM17 10C17 10.9193 16.8189 11.8295 16.4672 12.6788C16.1154 13.5281 15.5998 14.2997 14.9497 14.9497C14.2997 15.5998 13.5281 16.1154 12.6788 16.4672C11.8295 16.8189 10.9193 17 10 17C9.08075 17 8.1705 16.8189 7.32122 16.4672C6.47194 16.1154 5.70026 15.5998 5.05025 14.9497C4.40024 14.2997 3.88463 13.5281 3.53284 12.6788C3.18106 11.8295 3 10.9193 3 10C3 8.14348 3.7375 6.36301 5.05025 5.05025C6.36301 3.7375 8.14348 3 10 3C11.8565 3 13.637 3.7375 14.9497 5.05025C16.2625 6.36301 17 8.14348 17 10Z"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </a>
      </li>
      <li
        className="group relative h-16"
      >
        <span
          className="transition opacity-0 px-3 py-1 rounded bg-gray-800 text-white transform absolute whitespace-nowrap delay-1000 pointer-events-none group-hover:opacity-100 group-hover:delay-0 bg-opacity-90 left-full top-1/2 translate-x-2 -translate-y-1/2"
        >
          Über das Projekt
        </span>
        <a
          className="transition group-first:rounded-t group-last:rounded-b w-full h-full grid place-items-center focus:rounded hover:bg-gray-200 focus:ring-offset-2 focus:ring-offset-white hover:text-gray-800 focus:ring-2 focus:ring-gray-800 focus:outline-none bg-gray-800 text-white active"
          href="/map"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <svg
            fill="none"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 6L18 18M6 18L18 6L6 18Z"
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </a>
      </li>
    </ul>
  </nav>
</div>
`;
